<?xml version="1.0"?>
<package format="2">
  <name>stag_ros</name>
  <version>0.3.8</version>
  <description>The stag_ros package</description>

  <url type="repository">https://github.com/usrl-uofsc/stag_ros</url>
  <url type="bugtracker">https://github.com/usrl-uofsc/stag_ros/issues</url>
  <url type="website">http://wiki.ros.org/stag_ros</url>

  <maintainer email="bscain@email.sc.edu">Brennan Cain</maintainer>
  <maintainer email="michailk@email.sc.edu">Michail Kalaitzakis</maintainer>

  <license>MIT</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <nodelet plugin="${prefix}/stag_nodelet.xml" />
  </export>
</package>
