<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stag_ros</name>
  <version>0.3.9</version>
  <description>The stag_ros package</description>

  <url type="repository">https://github.com/usrl-uofsc/stag_ros</url>
  <url type="bugtracker">https://github.com/usrl-uofsc/stag_ros/issues</url>
  <url type="website">http://wiki.ros.org/stag_ros</url>

  <maintainer email="bscain@email.sc.edu">Brennan Cain</maintainer>
  <maintainer email="michailk@email.sc.edu">Michail Kalaitzakis</maintainer>
  <maintainer email="bpatiste@aica.tech">Baptiste Busch</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
